fixed css issues and html issues so they align cleanly

--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -170,7 +170,6 @@
     display: flex;
     margin: 0.25em 0 1.5em 0;
     padding: 0;
-    align-items: flex-end;
 
     @include media($medium) {
       margin: 0;
